# custom-sa

./: .gitignore  CMakeLists.txt
gmsv/: CMakeLists.txt  badpetstring.txt  buf.c  callfromac.c  configfile.c  function.c  handletime.c  log.c  lssproto_serv.c  main.c  msignal.c  net.c  object.c  saacproto_cli.c  util.c
gmsv/battle/: battle.c  battle_ai.c  battle_command.c  battle_event.c  battle_item.c  battle_magic.c  makefile
gmsv/char/: addressbook.c  char.c  char.c.bak  char_data.c  char_event.c  char_item.c  char_party.c  char_talk.c  char_walk.c  chatmagic.c  enemy.c  event.c  family.c  pet_event.c  petmail.c  title.c  trade.c  ®ª+ª char.c
gmsv/config/: log.cf  setup.cf
gmsv/data/: appear.txt  bmitem.txt  contract.txt  effect.txt  encount.txt  encount1.txt  enemy.txt  enemybase1.txt  gambleitems.txt  gmset.txt  group.txt  group1.txt  inv.txt  itematom.txt  itemset.txt  jobdaily.txt  leaderride.txt  magic.txt  malayfia.txt  mission.txt  petskill.txt  profession.txt  question.txt  raceman.txt  racequiz.txt  ride.txt  skillcode.txt  titleconfig.txt  titlename.txt
gmsv/include/: addressbook.h  battle.h  battle_event.h  battle_magic.h  char.h  char_base.h  char_data.h  chatmagic.h  common.h  correct_bug.h  defaultPlayer.h  enemy.h  family.h  handletime.h  item.h  item_event.h  log.h  lssproto_serv.h  magic.h  magic_base.h  net.h  npc_eventaction.h  npcutil.h  object.h  pet.h  pet_skill.h  readmap.h  saacproto_cli.h  sndcnf.h  version.h
gmsv/item/: item.c  item_event.c
gmsv/map/: map_deal.c  map_warppoint.c  readmap.c
gmsv/npc/: npc_airplane.c  npc_alldoman.c  npc_bankman.c  npc_bodylan.c  npc_dengon.c  npc_exchangeman.c  npc_fmpkcallman.c  npc_fmwarpman.c  npc_freepetskillshop.c  npc_gamblebank.c  npc_gamblemaster.c  npc_gambleroulette.c  npc_healer.c  npc_itemchange.c  npc_itemshop.c  npc_luckyman.c  npc_manorsman.c  npc_mic.c  npc_newnpcman.c  npc_petmaker.c  npc_petracemaster.c  npc_petshop.c.bak  npc_petskillshop.c  npc_quiz.c  npc_riderman.c  npc_scheduleman.c  npc_sysinfo.c  npc_timeman.c  npc_townpeople.c  npc_transerman.c  npc_transmigration.c  npc_warpman.c  npc_windowhealer.c  npc_windowman.c  npccreate.c  (+3 more)
saac/: CMakeLists.txt  acfamily.c  badpetstring.txt  char.c  db.c  lock.c  mail.c  main.c  makefile  recv.c  saacproto_serv.c  sasql.c  util.c
(+749 files in other folders)
