cmake_minimum_required(VERSION 2.6)

configure_file(resources/acserv.cf ${CMAKE_CURRENT_BINARY_DIR}/acserv.cf COPYONLY)
configure_file(resources/badpetstring.txt ${CMAKE_CURRENT_BINARY_DIR}/badpetstring.txt COPYONLY)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/char)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/log)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/mail)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/char_sleep)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)

include_directories(src/include)
file(GLOB_RECURSE HEADER_FILES src/include/*.h)
file(GLOB_RECURSE MAIN_FILES src/*.c)
add_executable(saac ${MAIN_FILES} ${HEADER_FILES})
target_link_libraries(saac mysqlclient)